# template-manager-cli-agent

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: manifest.json
src/: agent.rs  app.rs  cli.rs  doctor.rs  error.rs  fs.rs  main.rs  manifest.rs  scaffold.rs  spec_kit.rs  update.rs
tests/: cli.rs
