[package]
name = "tm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.19.1"
